--- a/public/admin/css/file-upload.css
+++ b/public/admin/css/file-upload.css
@@ -1,96 +1,3 @@
-/* .quote-imgs-thumbs {
-    background:#394d6c;
-    border-radius: 0.25rem;
-    margin: 1.5rem 0;
-    padding: 0.95rem;
-    }
-    .quote-imgs-thumbs--hidden {
-    display: none;
-    }
-    .img-preview-thumb {
-    border-radius: 0.25rem;
-    box-shadow: 0.325rem 0.325rem 0.1825rem rgb(0, 0, 0, 63%);
-    margin-right: 1rem;
-    margin-bottom: 1%;
-    max-width: 12 0px;
-    max-height: 80px;
-    } */
-
-    /* .preview-images-zone {
-        background:#394d6c;
-        width: 100%;
-        min-height: 180px;
-        padding: 15px 11px 15px 11px;
-        box-shadow: 0.325rem 0.325rem 0.1825rem rgb(79, 115, 169, 35%);
-        position: relative;
-        overflow:auto;
-    }
-    .preview-images-zone--hidden {
-        display: none;
-    }
-    .preview-images-zone > .preview-image:first-child {
-        height: 100px;
-        width: 120px;
-        box-shadow: 0.325rem 0.325rem 0.1825rem rgb(5, 7, 9, 56%);
-        position: relative;
-        margin-right: 13px;
-    }
-    .preview-images-zone > .preview-image {
-        height: 100px;
-        width: 120px;
-        box-shadow: 0.325rem 0.325rem 0.1825rem rgb(5, 7, 9, 56%);
-        position: relative;
-        margin-right: 13px;
-        float: left;
-        margin-bottom: 20px;
-    }
-    .preview-images-zone > .preview-image > .image-zone {
-        width: 100%;
-        height: 100%;
-    }
-    .preview-images-zone > .preview-image > .image-zone > img {
-        width: 100%;
-        height: 100%;
-    }
-    .preview-images-zone > .preview-image > .tools-edit-image {
-        position: absolute;
-        z-index: 100;
-        color: #fff;
-        bottom: 0;
-        width: 100%;
-        text-align: center;
-        margin-bottom: 10px;
-        display: none;
-    }
-    .preview-images-zone > .preview-image > .image-cancel {
-        font-size: 18px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        font-weight: bold;
-        margin-right: 10px;
-        cursor: pointer;
-        display: none;
-        z-index: 100;
-    }
-    .preview-image:hover > .image-zone {
-        cursor: move;
-        opacity: .5;
-    }
-    .preview-image:hover > .tools-edit-image,
-    .preview-image:hover > .image-cancel {
-        display: block;
-    }
-    .ui-sortable-helper {
-        width: 90px !important;
-        height: 90px !important;
-    }
-
-    .container {
-        padding-top: 50px;
-    } */
-
-/*Copied from bootstrap to handle input file multiple*/
 .btn {
     display: inline-block;
     padding: 6px 12px;
@@ -110,14 +17,14 @@
     border: 1px solid transparent;
     border-radius: 4px;
   }
-  /*Also */
+
   .btn-success {
     border: 1px solid #c5dbec;
     background: #d0e5f5;
     font-weight: bold;
     color: #2e6e9e;
   }
-  /* This is copied from https://github.com/blueimp/jQuery-File-Upload/blob/master/css/jquery.fileupload.css */
+
   .fileinput-button {
     position: relative;
     overflow: hidden;
@@ -209,3 +116,8 @@
     margin:2px;
     margin-right:7px;
   }
+
+  .disabledbutton {
+    pointer-events: none;
+    }
+
